--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.clojure</groupId>
+  <groupId>nl.onlinetouch</groupId>
   <artifactId>clojure</artifactId>
   <name>clojure</name>
   <packaging>jar</packaging>
@@ -62,56 +62,56 @@
   <build>
     <resources>
       <resource>
-	<directory>src/resources</directory>
-	<filtering>true</filtering>
+        <directory>src/resources</directory>
+        <filtering>true</filtering>
       </resource>
       <resource>
-	<directory>src/clj</directory>
+        <directory>src/clj</directory>
       </resource>
     </resources>
     <testSourceDirectory>test/java</testSourceDirectory>
     <plugins>
       <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-compiler-plugin</artifactId>
-	<version>2.3.2</version>
-	<configuration>
-	  <source>1.5</source>
-	  <target>1.5</target>
-	  <encoding>${project.build.sourceEncoding}</encoding>
-	</configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+          <encoding>${project.build.sourceEncoding}</encoding>
+        </configuration>
       </plugin>
       <plugin>
-	<artifactId>maven-antrun-plugin</artifactId>
-	<version>1.6</version>
-	<executions>
-	  <execution>
-	    <id>clojure-compile</id>
-	    <phase>compile</phase>
-	    <goals>
-	      <goal>run</goal>
-	    </goals>
-	    <configuration>
-	      <target>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.6</version>
+        <executions>
+          <execution>
+            <id>clojure-compile</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
                 <property name="maven.compile.classpath" refid="maven.compile.classpath" />
-		<ant target="compile-clojure" />
-	      </target>
-	    </configuration>
-	  </execution>
-	  <execution>
-	    <id>clojure-test</id>
-	    <phase>test</phase>
-	    <goals>
-	      <goal>run</goal>
-	    </goals>
-	    <configuration>
-	      <target>
+                <ant target="compile-clojure" />
+              </target>
+            </configuration>
+          </execution>
+          <execution>
+            <id>clojure-test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
                 <property name="maven.test.classpath" refid="maven.test.classpath" />
-		<ant target="test" />
-	      </target>
-	    </configuration>
-	  </execution>
-	</executions>
+                <ant target="test" />
+              </target>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -126,79 +126,79 @@
             </goals>
             <configuration>
               <sources>
-		<source>src/jvm</source>
+                <source>src/jvm</source>
               </sources>
             </configuration>
           </execution>
         </executions>
       </plugin>
       <plugin>
-	<artifactId>maven-assembly-plugin</artifactId>
+        <artifactId>maven-assembly-plugin</artifactId>
         <version>2.2</version>
-	<executions>
-	  <execution>
-	    <id>clojure-slim-jar</id>
-	    <phase>package</phase>
-	    <goals>
-	      <goal>single</goal>
-	    </goals>
-	    <configuration>
-	      <descriptors>
-		<descriptor>src/assembly/slim.xml</descriptor>
-	      </descriptors>
-	      <archive>
-		<manifest>
-		  <mainClass>clojure.main</mainClass>
-		</manifest>
-	      </archive>
-	    </configuration>
-	  </execution>
-	</executions>
+        <executions>
+          <execution>
+            <id>clojure-slim-jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <configuration>
+              <descriptors>
+                <descriptor>src/assembly/slim.xml</descriptor>
+              </descriptors>
+              <archive>
+                <manifest>
+                  <mainClass>clojure.main</mainClass>
+                </manifest>
+              </archive>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
-	<artifactId>maven-jar-plugin</artifactId>
-	<version>2.3.1</version>
-	<configuration>
-	  <archive>
-	    <manifest>
-	      <mainClass>clojure.main</mainClass>
-	    </manifest>
-	  </archive>
-	</configuration>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.3.1</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>clojure.main</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
       <plugin>
-	<artifactId>maven-source-plugin</artifactId>
-	<version>2.1.2</version>
-	<executions>
-	  <execution>
-	    <id>sources-jar</id>
-	    <phase>package</phase>
-	    <goals>
-	      <goal>jar</goal>
-	    </goals>
-	  </execution>
-	</executions>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.1.2</version>
+        <executions>
+          <execution>
+            <id>sources-jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
-	<!-- do not push SCM changes to upstream repository;
-	     prevents pushing tags/commits for failed releases;
-	     instead, push SCM changes in Hudson configuration -->
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-release-plugin</artifactId>
-	<version>2.1</version>
-	<configuration>
-	  <pushChanges>false</pushChanges>
-	  <localCheckout>true</localCheckout>
-	</configuration>
+        <!-- do not push SCM changes to upstream repository;
+             prevents pushing tags/commits for failed releases;
+             instead, push SCM changes in Hudson configuration -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.1</version>
+        <configuration>
+          <pushChanges>false</pushChanges>
+          <localCheckout>true</localCheckout>
+        </configuration>
       </plugin>
       <plugin>
-	<!-- disable the Surefire testing plugin -->
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-surefire-plugin</artifactId>
-	<version>2.6</version>
-	<configuration>
-	  <skip>true</skip>
-	</configuration>
+        <!-- disable the Surefire testing plugin -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -208,27 +208,27 @@
       <!-- "mvn -Pdistribution package" builds a .zip file -->
       <id>distribution</id>
       <build>
-	<plugins>
-	  <plugin>
-	    <artifactId>maven-assembly-plugin</artifactId>
-	    <version>2.2</version>
-	    <executions>
-	      <execution>
-		<id>clojure-distribution</id>
-		<phase>package</phase>
-		<goals>
-		  <goal>single</goal>
-		</goals>
-		<configuration>
-		  <appendAssemblyId>false</appendAssemblyId>
-		  <descriptors>
-		    <descriptor>src/assembly/distribution.xml</descriptor>
-		  </descriptors>
-		</configuration>
-	      </execution>
-	    </executions>
-	  </plugin>
-	</plugins>
+        <plugins>
+          <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>2.2</version>
+            <executions>
+              <execution>
+                <id>clojure-distribution</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>single</goal>
+                </goals>
+                <configuration>
+                  <appendAssemblyId>false</appendAssemblyId>
+                  <descriptors>
+                    <descriptor>src/assembly/distribution.xml</descriptor>
+                  </descriptors>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
       </build>
     </profile>
   </profiles>
