--- a/pom.xml
+++ b/pom.xml
@@ -236,18 +236,19 @@
       </plugin>
 
       <!-- deploy artifacts to sonatype -->
+<!--       
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
         <version>1.6.7</version>
         <extensions>true</extensions>
-        <configuration>
+        <configuration> -->
           <!-- The server "id" element from settings to use authentication from -->
-          <serverId>sonatype-nexus-staging</serverId>
+          <!--<serverId>sonatype-nexus-staging</serverId>
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
-      </plugin>
+      </plugin> -->
 
     </plugins>
   </build>
